--- a/index.html
+++ b/index.html
@@ -4,9 +4,35 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <style src="styles.css"></style>
     <title>Document</title>
 </head>
 <body>
+<div id="main">
+    <div id="calculator">
+    <div id="display"></div>
+    <button>AC</button>
+    <button>+/-</button>
+    <button>%</button>
+    <button>/</button>
+    <button>7</button>
+    <button>8</button>
+    <button>9</button>
+    <button>*</button>
+    <button>4</button>
+    <button>5</button>
+    <button>6</button>
+    <button>-</button>
+    <button>1</button>
+    <button>2</button>
+    <button>3</button>
+    <button>+</button>
+    <button>0</button>
+    <button>.</button>
+    <button>=</button>
+    </div>
+</div>
+
     <script src="javascript.js"></script>
 </body>
 </html>
