--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <style src="styles.css"></style>
+    <link rel="stylesheet" href="styles.css">
     <title>Document</title>
 </head>
 <body>
@@ -27,7 +27,7 @@
     <button>2</button>
     <button>3</button>
     <button>+</button>
-    <button>0</button>
+    <button id="button0">0</button>
     <button>.</button>
     <button>=</button>
     </div>
