--- a/index.html
+++ b/index.html
@@ -14,22 +14,22 @@
     <button>AC</button>
     <button>+/-</button>
     <button>%</button>
-    <button>/</button>
-    <button>7</button>
-    <button>8</button>
-    <button>9</button>
-    <button>*</button>
-    <button>4</button>
-    <button>5</button>
-    <button>6</button>
-    <button>-</button>
-    <button>1</button>
-    <button>2</button>
-    <button>3</button>
-    <button>+</button>
-    <button id="button0">0</button>
-    <button>.</button>
-    <button>=</button>
+    <button data-key="111">/</button>
+    <button data-key="103">7</button>
+    <button data-key="104">8</button>
+    <button data-key="105">9</button>
+    <button data-key="106">*</button>
+    <button data-key="100">4</button>
+    <button data-key="101">5</button>
+    <button data-key="102">6</button>
+    <button data-key="109">-</button>
+    <button data-key="97">1</button>
+    <button data-key="98">2</button>
+    <button data-key="99">3</button>
+    <button data-key="107">+</button>
+    <button data-key="96" id="button0">0</button>
+    <button data-key="108">.</button>
+    <button data-key="13">=</button>
     </div>
 </div>
 
