--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 <div id="main">
     <div id="calculator">
-    <div id="display"></div>
+    <div id="display">1234567890</div>
     <button>AC</button>
     <button>+/-</button>
     <button>%</button>
