--- a/index.html
+++ b/index.html
@@ -10,26 +10,26 @@
 <body>
 <div id="main">
     <div id="calculator">
-    <div id="display">1234567890</div>
+    <div id="display">9999</div>
     <button>AC</button>
     <button>+/-</button>
     <button>%</button>
-    <button data-key="111">/</button>
-    <button data-key="103">7</button>
-    <button data-key="104">8</button>
-    <button data-key="105">9</button>
-    <button data-key="106">*</button>
-    <button data-key="100">4</button>
-    <button data-key="101">5</button>
-    <button data-key="102">6</button>
-    <button data-key="109">-</button>
-    <button data-key="97">1</button>
-    <button data-key="98">2</button>
-    <button data-key="99">3</button>
-    <button data-key="107">+</button>
-    <button data-key="96" id="button0">0</button>
-    <button data-key="108">.</button>
-    <button data-key="13">=</button>
+    <button data-key="111" class="key">/</button>
+    <button data-key="103" class="key">7</button>
+    <button data-key="104" class="key">8</button>
+    <button data-key="105" class="key">9</button>
+    <button data-key="106" class="key">*</button>
+    <button data-key="100" class="key">4</button>
+    <button data-key="101" class="key">5</button>
+    <button data-key="102" class="key">6</button>
+    <button data-key="109" class="key">-</button>
+    <button data-key="97" class="key">1</button>
+    <button data-key="98" class="key">2</button>
+    <button data-key="99" class="key">3</button>
+    <button data-key="107" class="key">+</button>
+    <button data-key="96" class="key" id="button0">0</button>
+    <button data-key="108" class="key">.</button>
+    <button data-key="13" class="key">=</button>
     </div>
 </div>
 
