Added comments and queryselector for operands and operators

--- a/index.html
+++ b/index.html
@@ -11,25 +11,30 @@
 <div id="main">
     <div id="calculator">
     <div id="display">0</div>
-    <button>AC</button>
+    <!-- row 1 -->
+    <button id="allClear">AC</button>
     <button>+/-</button>
     <button>%</button>
-    <button data-key="111" class="key">/</button>
-    <button data-key="103" class="key">7</button>
-    <button data-key="104" class="key">8</button>
-    <button data-key="105" class="key">9</button>
-    <button data-key="106" class="key">*</button>
-    <button data-key="100" class="key">4</button>
-    <button data-key="101" class="key">5</button>
-    <button data-key="102" class="key">6</button>
-    <button data-key="109" class="key">-</button>
-    <button data-key="97" class="key">1</button>
-    <button data-key="98" class="key">2</button>
-    <button data-key="99" class="key">3</button>
-    <button data-key="107" class="key">+</button>
-    <button data-key="96" class="key" id="button0">0</button>
-    <button data-key="108" class="key">.</button>
-    <button data-key="13" class="key">=</button>
+    <button data-key="111" class="operator">/</button>
+    <!-- row 2 -->
+    <button data-key="103" class="operand">7</button>
+    <button data-key="104" class="operand">8</button>
+    <button data-key="105" class="operand">9</button>
+    <button data-key="106" class="operator">*</button>
+    <!-- row 3 -->
+    <button data-key="100" class="operand">4</button>
+    <button data-key="101" class="operand">5</button>
+    <button data-key="102" class="operand">6</button>
+    <button data-key="109" class="operator">-</button>
+    <!-- row 4 -->
+    <button data-key="97" class="operand">1</button>
+    <button data-key="98" class="operand">2</button>
+    <button data-key="99" class="operand">3</button>
+    <button data-key="107" class="operator">+</button>
+    <!-- row 5 -->
+    <button data-key="96" class="operand" id="button0">0</button>
+    <button data-key="108" class="operand">.</button>
+    <button data-key="13" class="operator">=</button>
     </div>
 </div>
 
