Added global displayValue

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 <div id="main">
     <div id="calculator">
-    <div id="display">0</div>
+    <div id="display"></div>
     <!-- row 1 -->
     <button id="allClear">AC</button>
     <button>+/-</button>
