--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <!-- row 5 -->
     <button data-key="96" class="operand" id="button0">0</button>
     <button data-key="108" class="operand">.</button>
-    <button data-key="13" class="operator">=</button>
+    <button data-key="13" id="operate">=</button>
     </div>
 </div>
 
