Added divisible by 0 message

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div id="display"></div>
     <!-- row 1 -->
     <button id="allClear">AC</button>
-    <button>+/-</button>
+    <button id="plusMinus">+/-</button>
     <button>%</button>
     <button data-key="111" class="operator">/</button>
     <!-- row 2 -->
