Decimalbutton function added

--- a/index.html
+++ b/index.html
@@ -33,10 +33,11 @@
     <button data-key="107" class="operator">+</button>
     <!-- row 5 -->
     <button data-key="96" class="operand" id="button0">0</button>
-    <button data-key="108" class="operand">.</button>
+    <button data-key="108" id="decimal">.</button>
     <button data-key="13" id="operate">=</button>
     </div>
 </div>
+<div id="history">History</div>
 
     <script src="javascript.js"></script>
 </body>
