--- a/index.html
+++ b/index.html
@@ -15,26 +15,26 @@
     <button id="allClear">AC</button>
     <button id="plusMinus">+/-</button>
     <button>%</button>
-    <button data-key="111" class="operator">/</button>
+    <button class="operator">/</button>
     <!-- row 2 -->
-    <button data-key="7" class="operand">7</button>
-    <button data-key="104" class="operand">8</button>
-    <button data-key="105" class="operand">9</button>
-    <button data-key="106" class="operator">*</button>
+    <button class="operand">7</button>
+    <button class="operand">8</button>
+    <button class="operand">9</button>
+    <button class="operator">*</button>
     <!-- row 3 -->
-    <button data-key="100" class="operand">4</button>
-    <button data-key="101" class="operand">5</button>
-    <button data-key="102" class="operand">6</button>
-    <button data-key="109" class="operator">-</button>
+    <button class="operand">4</button>
+    <button class="operand">5</button>
+    <button class="operand">6</button>
+    <button class="operator">-</button>
     <!-- row 4 -->
-    <button data-key="97" class="operand">1</button>
-    <button data-key="98" class="operand">2</button>
-    <button data-key="99" class="operand">3</button>
-    <button data-key="107" class="operator">+</button>
+    <button class="operand">1</button>
+    <button class="operand">2</button>
+    <button class="operand">3</button>
+    <button class="operator">+</button>
     <!-- row 5 -->
-    <button data-key="96" class="operand" id="button0">0</button>
-    <button data-key="108" id="decimal">.</button>
-    <button data-key="13" id="operate">=</button>
+    <button class="operand" id="button0">0</button>
+    <button id="decimal">.</button>
+    <button id="operate">=</button>
     </div>
 </div>
 <div id="history">History</div>
