Added root button

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <!-- row 1 -->
     <button id="allClear">AC</button>
     <button id="plusMinus">+/-</button>
-    <button>%</button>
+    <button id="root">√</button>
     <button class="operator">/</button>
     <!-- row 2 -->
     <button class="operand">7</button>
