--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <div id="calculator">
     <div id="display"></div>
     <!-- row 1 -->
-    <button id="allClear">AC</button>
-    <button id="plusMinus">+/-</button>
-    <button id="root">√</button>
+    <button class="restButton" id="allClear">AC</button>
+    <button class="restButton" id="plusMinus">+/-</button>
+    <button class="restButton" id="root">√</button>
     <button class="operator">/</button>
     <!-- row 2 -->
     <button class="operand">7</button>
