--- a/index.html
+++ b/index.html
@@ -36,8 +36,9 @@
     <button id="decimal">.</button>
     <button id="operate">=</button>
     </div>
+    <div id="history"></div>
 </div>
-<div id="history">History</div>
+
 
     <script src="javascript.js"></script>
 </body>
